--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title> binod.com</title>
 </head>
 <body>
-    <h1>this is the first website</h1>
+    <h1>this is the second website</h1>
 </body>
 </html>
